--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -58,12 +58,6 @@
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Networking">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
@@ -102,6 +96,7 @@
     <Compile Include="Assets\Scripts\Map\GridManager.cs" />
     <Compile Include="Assets\Scripts\Map\MapLoadData.cs" />
     <Compile Include="Assets\Scripts\Map\MapLoader.cs" />
+    <Compile Include="Assets\Scripts\Map\SpawnMinesRandomly.cs" />
     <Compile Include="Assets\Scripts\Map\TileInfo.cs" />
     <Compile Include="Assets\Scripts\Map\UndergroundManager.cs" />
     <Compile Include="Assets\Scripts\Map\UndergroundTile.cs" />
@@ -150,6 +145,7 @@
     <Compile Include="Assets\UI\UI-Scripts\DisplayRound.cs" />
     <Compile Include="Assets\UI\UI-Scripts\EndTurn.cs" />
     <Compile Include="Assets\UI\UI-Scripts\EscapeMenu.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\FadeIn.cs" />
     <Compile Include="Assets\UI\UI-Scripts\FadeUI.cs" />
     <Compile Include="Assets\UI\UI-Scripts\GUIData.cs" />
     <Compile Include="Assets\UI\UI-Scripts\HealthBar.cs" />
@@ -166,7 +162,6 @@
     <Compile Include="Assets\UI\UI-Scripts\SetSoundEffectVolume.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ShowNameText.cs" />
     <Compile Include="Assets\UI\UI-Scripts\ShowTurnImage.cs" />
-    <Compile Include="Assets\UI\UI-Scripts\SpawnButton.cs" />
     <Compile Include="Assets\UI\UI-Scripts\UnitInfoControl.cs" />
     <Compile Include="Assets\UI\UI-Scripts\UnitInfoGui.cs" />
   </ItemGroup>
