startlogo + diverse änderungen

--- a/animperium/animperium.CSharp.csproj
+++ b/animperium/animperium.CSharp.csproj
@@ -61,6 +61,12 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Xcode">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEditor.iOS.Extensions.Common">
+      <HintPath>Library\UnityAssemblies\UnityEditor.iOS.Extensions.Common.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="animperium.CSharp.Plugins.csproj">
@@ -140,9 +146,11 @@
     <Compile Include="Assets\UI\UI-Scripts\EndTurn.cs" />
     <Compile Include="Assets\UI\UI-Scripts\EscapeMenu.cs" />
     <Compile Include="Assets\UI\UI-Scripts\FadeIn.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\FadeInOut.cs" />
     <Compile Include="Assets\UI\UI-Scripts\FadeUI.cs" />
     <Compile Include="Assets\UI\UI-Scripts\GUIData.cs" />
     <Compile Include="Assets\UI\UI-Scripts\HealthBar.cs" />
+    <Compile Include="Assets\UI\UI-Scripts\LoadNetworkLobby.cs" />
     <Compile Include="Assets\UI\UI-Scripts\LookAtCamera.cs" />
     <Compile Include="Assets\UI\UI-Scripts\New UI\ChangeSpriteColor.cs" />
     <Compile Include="Assets\UI\UI-Scripts\New UI\UISpawn.cs" />
