--- a/animperium/Assembly-CSharp.csproj
+++ b/animperium/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\Map\GridManager.cs" />
      <Compile Include="Assets\Scripts\Map\MapLoadData.cs" />
      <Compile Include="Assets\Scripts\Map\MapLoader.cs" />
+     <Compile Include="Assets\Scripts\Map\SpawnMinesRandomly.cs" />
      <Compile Include="Assets\Scripts\Map\TileInfo.cs" />
      <Compile Include="Assets\Scripts\Map\UndergroundManager.cs" />
      <Compile Include="Assets\Scripts\Map\UndergroundTile.cs" />
@@ -105,6 +106,7 @@
      <Compile Include="Assets\Scripts\Util\GameEvent.cs" />
      <Compile Include="Assets\Scripts\Util\Vec2i.cs" />
      <Compile Include="Assets\UI\UI-Scripts\Context Menu\ButtonComponent.cs" />
+     <Compile Include="Assets\UI\UI-Scripts\Context Menu\CircleFadeIn.cs" />
      <Compile Include="Assets\UI\UI-Scripts\Context Menu\ContextMenuControl.cs" />
      <Compile Include="Assets\UI\UI-Scripts\Context Menu\ContextMenuPosition.cs" />
      <Compile Include="Assets\UI\UI-Scripts\Context Menu\ContextMenuSpawn.cs" />
@@ -128,7 +130,7 @@
      <Compile Include="Assets\UI\UI-Scripts\SetOnGui.cs" />
      <Compile Include="Assets\UI\UI-Scripts\SetSoundEffectVolume.cs" />
      <Compile Include="Assets\UI\UI-Scripts\ShowNameText.cs" />
-     <Compile Include="Assets\UI\UI-Scripts\SpawnButton.cs" />
+     <Compile Include="Assets\UI\UI-Scripts\ShowTurnImage.cs" />
      <Compile Include="Assets\UI\UI-Scripts\UnitInfoControl.cs" />
      <Compile Include="Assets\UI\UI-Scripts\UnitInfoGui.cs" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
